2010-10-10  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (autoload): Clean up autoloads.
	(nnir-imap-default-search-key): Renamed from
	nnir-imap-search-field. Use key rather than value.
	(nnir-imap-search-other): New variable.
	(nnir-read-parm): Use it.
	(nnir-imap-expr-to-imap): Use %S rather than imap-quote-specials.
	(gnus-summary-nnir-goto-thread): Modify to work with imap.

2010-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-wait-for-response): If the user hits `C-g', kill
	the process, too.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam.el (gnus-summary-mode-map): Bind to "$".  Suggested by Russ
	Allbery.

	* shr.el: Rework the way things are indented by <li> slightly.

	* gnus.el (gnus-group-set-parameter): Fix typo.

	* nnimap.el: Start implementing QRESYNC support.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-engines): Fix too many arguments.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expiry-target-group): Say that every expiry target
	group is the "last", so that the backends like nnfolder actually save
	their folders.

	* nnimap.el (nnimap-open-connection): If we have gnutls loaded, then
	try to use that for the tls stream.
	(nnimap-retrieve-group-data-early): Rework the marks code to heed
	UIDVALIDITY and find out which groups are read-only and not.
	(nnimap-get-flags): Use the same marks parsing code as the rest of
	nnimap.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-read-parm): Fix call to gnus-completing-read.

	* gnus-gravatar.el (gnus-gravatar-transform-address): Error errors when
	retrieving gravatars.

	* shr.el (shr-table-corner): Add.
	(shr-table-line): Add.
	(shr-insert-table-ruler): Use the above defcustoms to insert tables.

2010-10-08  Julien Danjou  <julien@danjou.info>

	* mm-decode.el (mm-text-html-renderer): Add mm-shr in choice list.

2010-10-08  Teodor Zlatanov  <tzz@lifelogs.com>
